--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "Bohem 개발노트"
+title                    : "BOHEM 개발노트"
 title_separator          : "|"
 subtitle                 : "평화로운 일상이 좋다."
 name                     : "BOHEM"
@@ -105,8 +105,8 @@ author:
   name             : "BOHEM"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "BOHEM의 개발블러그 입니다."
-  location         : "Somewhere"
-  email            :
+  location         : "South Korea"
+  email            : "limdongo@icloud.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
