--- a/_config.yml
+++ b/_config.yml
@@ -110,22 +110,16 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:limdongo@icloud.com
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
+      url: "mailto:limdongo@icloud.com"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+      url: "https://facebook.com/limdongo"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/BohemLim"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://www.instagram.com/daysis77/?hl=ko"
 
 # Site Footer
 footer:
