--- a/_config.yml
+++ b/_config.yml
@@ -108,9 +108,9 @@ author:
   location         : "South Korea"
   email            : "limdongo@icloud.com"
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:limdongo@icloud.com"
+    # - label: "Email"
+    #   icon: "fas fa-fw fa-envelope-square"
+    #   url: "mailto:limdongo@icloud.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/BohemLim"
